demo01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: demo01
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
