demo01/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
       - namespaceSelector:
           matchLabels:
             environment: production
      ports:
        - protocol: TCP
          port: 80
